--- a/index.html
+++ b/index.html
@@ -260,17 +260,17 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Product Details</h5>
+                <h5 id="modal-product-name"></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="display: flex; flex-direction: row; ">
                 <div>
-                    <img id="modal-product-image" src="" class="img-fluid" alt="Product Image">
+                    <img id="modal-product-image" src="" class="img-fluid" alt="Product Image" style="height: 250px;">
                 </div>
-                <div>
-                    <h5 id="modal-product-name"></h5>
+                <div style="margin-left: 3em;">
+                
                     <p id="modal-product-description"></p>
                     <p id="modal-product-price"></p>
                 </div>
