--- a/index.html
+++ b/index.html
@@ -231,10 +231,12 @@
         margin-top: 0.1rem;
         margin-left: 1rem;
     }
-/* Ensure modal content is properly aligned */
-.modal-body .row {
-    align-items: flex-start;
-}
+
+    /* Ensure modal content is properly aligned */
+    .modal-body .row {
+        align-items: flex-start;
+    }
+
     @media (max-width: 767px) {
         #navbar.sticky {
             position: fixed;
@@ -264,7 +266,7 @@
             flex-direction: column;
 
         }
-   
+
         #modal-product-image-container {
             margin-right: 2em;
 
@@ -325,69 +327,6 @@
             <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
-
-<!-- Modal -->
-<div class="modal fade" id="itemDetailsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 id="modal-product-name"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="row mt-3">
-                    <!-- Product Image -->
-                    <div id="modal-product-image-container" class="col-md-6 text-center">
-                        <img id="modal-product-image" src="" class="img-fluid" alt="Product Image">
-                    </div>
-                    <!-- Product Details -->
-                    <div id="modal-product-body" class="col-md-6 mt-3 mt-md-0">
-                        <p id="modal-product-description"></p>
-                        <p id="modal-product-price"></p>
-                    </div>
-                </div>
-                
-            </div>
-            <!-- Nav tabs -->
-<ul class="nav nav-tabs mt-4 justify-content-center" id="productTab" role="tablist">
-    <li class="nav-item">
-        <a class="nav-link active" id="specifications-tab" data-toggle="tab" href="#specifications"
-            role="tab" aria-controls="specifications" aria-selected="true">Specifications</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" id="reviews-tab" data-toggle="tab" href="#reviews" role="tab"
-            aria-controls="reviews" aria-selected="false">Reviews</a>
-    </li>
-</ul>
-
-            <!-- Tab panes -->
-            <div class="tab-content" id="productTabContent">
-                
-                <!-- Specifications Tab -->
-                <div class="tab-pane fade show active" id="specifications" role="tabpanel"
-                    aria-labelledby="specifications-tab">
-                    <div id="modal-product-specifications" class="mt-3">
-                        <h6>Specifications:</h6>
-                        <p id="modal-product-specs"></p>
-                    </div>
-                </div>
-                <!-- Reviews Tab -->
-                <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
-                    <div id="modal-product-reviews" class="mt-3">
-                        <h6>Reviews:</h6>
-                        <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-    <img id="loader" class="loader" src="images/shopping.gif" alt="Loading...">
-
     <!-- Main Content -->
     <div id="main-content"
         style="padding-top: 10px;  font-size: medium; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
@@ -396,6 +335,96 @@
         <!-- Product Display Section -->
         <div id="product-list" class="row mt-4"></div>
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="itemDetailsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 id="modal-product-name"></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row mt-3">
+                        <!-- Product Image -->
+                        <div id="modal-product-image-container" class="col-md-6 text-center">
+                            <img id="modal-product-image" src="" class="img-fluid" alt="Product Image">
+                        </div>
+                        <!-- Product Details -->
+                        <div id="modal-product-body" class="col-md-6 mt-3 mt-md-0">
+                            <p id="modal-product-description"></p>
+                            <p id="modal-product-price"></p>
+
+                            <!-- Size Selection -->
+                            <div class="form-group">
+                                <label for="product-size">Size:</label>
+                                <select id="product-size" class="form-control">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                    <option value="xl">XL</option>
+                                </select>
+                            </div>
+
+                            <!-- Quantity Selection -->
+                            <div class="form-group">
+                                <label for="product-quantity">Quantity:</label>
+                                <input type="number" id="product-quantity" class="form-control" value="1" min="1">
+                            </div>
+
+                            <!-- Add to Cart Button -->
+                            <button id="add-to-cart-button" class="btn btn-primary">Add to Cart</button>
+
+                            <!-- Inquire on WhatsApp Button -->
+                            <a href="whatsapp://send?phone=+254723914386&text=Hello%20I%20would%20like%20to%20inquire%20about%20your%20product"
+                                class="btn btn-success mt-2">
+                                Inquire on WhatsApp
+                            </a>
+                        </div>
+
+                    </div>
+
+                </div>
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs mt-4 justify-content-center" id="productTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="specifications-tab" data-toggle="tab" href="#specifications"
+                            role="tab" aria-controls="specifications" aria-selected="true">Description</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="reviews-tab" data-toggle="tab" href="#reviews" role="tab"
+                            aria-controls="reviews" aria-selected="false">Reviews</a>
+                    </li>
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content" id="productTabContent">
+
+                    <!-- Specifications Tab -->
+                    <div class="tab-pane fade show active" id="specifications" role="tabpanel"
+                        aria-labelledby="specifications-tab">
+                        <div id="modal-product-specifications" class="mt-3">
+                            <h6>Specifications:</h6>
+                            <p id="modal-product-specs"></p>
+                        </div>
+                    </div>
+                    <!-- Reviews Tab -->
+                    <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
+                        <div id="modal-product-reviews" class="mt-3">
+                            <h6>Reviews:</h6>
+                            <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <img id="loader" class="loader" src="images/shopping.gif" alt="Loading...">
+
+
 
 
     <!-- Bootstrap JS and jQuery -->
@@ -421,7 +450,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy/T8xKZ5tiEAPD+JX/WfS7GVI5u6dHvcC"
         crossorigin="anonymous"></script>
-    <!-- Your custom JavaScript -->
+
     <script src="script.js"></script>
     <footer id="footer" class="footer custom-bg-blue hidden">
         <div class="container">
