--- a/index.html
+++ b/index.html
@@ -373,14 +373,13 @@
                                 <input type="number" id="product-quantity" class="form-control" value="1" min="1">
                             </div>
 
-                            <!-- Add to Cart Button -->
-                            <button id="add-to-cart-button" class="btn btn-primary">Add to Cart</button>
+                            <!-- Add to Cart and Inquire on WhatsApp Buttons -->
+                            <div class="d-flex justify-content-center mt-3">
+                                <button id="add-to-cart-button" class="btn btn-primary mx-2">Add to Cart</button>
+                                <a href="whatsapp://send?phone=+254723914386&text=Hello%20I%20would%20like%20to%20inquire%20about%20your%20product"
+                                    class="btn btn-success mx-2">Inquire on WhatsApp</a>
+                            </div>
 
-                            <!-- Inquire on WhatsApp Button -->
-                            <a href="whatsapp://send?phone=+254723914386&text=Hello%20I%20would%20like%20to%20inquire%20about%20your%20product"
-                                class="btn btn-success mt-2">
-                                Inquire on WhatsApp
-                            </a>
                         </div>
 
                     </div>
