--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             <div class="d-flex justify-content-center mt-3">
                                 <button id="add-to-cart-button" class="btn btn-primary mx-2">Add to Cart</button>
                                 <a href="whatsapp://send?phone=+254723914386&text=Hello%20I%20would%20like%20to%20inquire%20about%20your%20product"
-                                    class="btn btn-success mx-2">Inquire on WhatsApp</a>
+                                    class="btn btn-success mx-2" id="whatsapp-button">Inquire on WhatsApp</a>
                             </div>
 
                         </div>
