--- a/index.html
+++ b/index.html
@@ -421,7 +421,18 @@
                             <h6>Reviews:</h6>
                             <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
                         </div>
+                        <div id="add-review-form" class="mt-3">
+
+                            <form id="review-form">
+                                <div class="form-group">
+                                    <label for="review-text">Add Review:</label>
+                                    <textarea id="review-text" class="form-control" rows="3" required></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Submit Review</button>
+                            </form>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -429,8 +440,6 @@
 
 
     <img id="loader" class="loader" src="images/shopping.gif" alt="Loading...">
-
-
 
 
     <!-- Bootstrap JS and jQuery -->
