--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
 
     }
 
+    .textarea-margin {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-right: 10px;
+    }
+
     /* Style card title */
     .card-title {
         font-size: 0.9rem;
@@ -422,11 +428,12 @@
                             <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
                         </div>
                         <div id="add-review-form" class="mt-3">
-
                             <form id="review-form">
+                                <input type="hidden" id="modal-product-id">
                                 <div class="form-group">
                                     <label for="review-text">Add Review:</label>
-                                    <textarea id="review-text" class="form-control" rows="3" required></textarea>
+                                    <textarea id="review-text" class="form-control textarea-margin" rows="3"
+                                        required></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Submit Review</button>
                             </form>
@@ -456,6 +463,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Include Bootstrap JS and dependencies if not already included -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
