--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="reviews-tab" data-toggle="tab" href="#reviews" role="tab"
-                            aria-controls="reviews" aria-selected="false">Reviews</a>
+                            aria-controls="reviews" aria-selected="false">Comments</a>
                     </li>
                 </ul>
 
@@ -422,23 +422,27 @@
                         </div>
                     </div>
                     <!-- Reviews Tab -->
-                    <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
-                        <div id="modal-product-reviews" class="mt-3">
-                            <h6>Reviews:</h6>
-                            <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
-                        </div>
-                        <div id="add-review-form" class="mt-3">
-                            <form id="review-form">
-                                <input type="hidden" id="modal-product-id">
-                                <div class="form-group">
-                                    <label for="review-text">Add Review:</label>
-                                    <textarea id="review-text" class="form-control textarea-margin" rows="3"
-                                        required></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Submit Review</button>
-                            </form>
-                        </div>
-                    </div>
+<div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
+    <div id="modal-product-reviews" class="mt-3">
+        <h6>Reviews:</h6>
+        <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
+    </div>
+    <div id="add-review-form" class="mt-3">
+        <form id="review-form">
+            <input type="hidden" id="modal-product-id">
+            <div class="form-group">
+                <label for="review-name">Name:</label>
+                <input type="text" id="review-name" class="form-control textarea-margin" required>
+            </div>
+            <div class="form-group">
+                <label for="review-text">comment:</label>
+                <textarea id="review-text" class="form-control textarea-margin" rows="3" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit Review</button>
+        </form>
+    </div>
+</div>
+
 
                 </div>
             </div>
