--- a/index.html
+++ b/index.html
@@ -287,8 +287,70 @@
             /* Align vertically */
             /* Adjust other styles as needed */
         }
+        .form-group {
+    width: 100%; /* Full width for consistent margins */
+    max-width: 500px; /* Adjust this value as needed */
+    margin: 10px 0; /* Equal margin for top and bottom */
+}
+
+.textarea-margin {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center; /* Center the button horizontally */
+    width: 100%;
+}
+
+.submit-review-button {
+    margin-top: 20px; /* Adjust the margin as needed */
+    margin-bottom: 20px; /* Adjust the margin as needed */
+}
 
     }
+
+    .button-container {
+        display: flex;
+        justify-content: center;
+        /* Center the button horizontally */
+    }
+
+    .submit-review-button {
+        margin-top: 20px;
+        /* Adjust the margin as needed */
+        margin-bottom: 20px;
+        /* Adjust the margin as needed */
+    }
+    .form-centered {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-group {
+    width: 100%; /* Full width for consistent margins */
+    max-width: 500px; /* Adjust this value as needed */
+    margin: 10px 0; /* Equal margin for top and bottom */
+}
+
+.textarea-margin {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center; /* Center the button horizontally */
+    width: 100%;
+}
+
+.submit-review-button {
+    margin-top: 20px; /* Adjust the margin as needed */
+    margin-bottom: 20px; /* Adjust the margin as needed */
+}
+
 </style>
 
 <body>
@@ -422,26 +484,29 @@
                         </div>
                     </div>
                     <!-- Reviews Tab -->
-<div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
-    <div id="modal-product-reviews" class="mt-3">
-        <h6>Reviews:</h6>
-        <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
-    </div>
-    <div id="add-review-form" class="mt-3">
-        <form id="review-form">
-            <input type="hidden" id="modal-product-id">
-            <div class="form-group">
-                <label for="review-name">Name:</label>
-                <input type="text" id="review-name" class="form-control textarea-margin" required>
-            </div>
-            <div class="form-group">
-                <label for="review-text">comment:</label>
-                <textarea id="review-text" class="form-control textarea-margin" rows="3" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit Review</button>
-        </form>
-    </div>
-</div>
+                    <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
+                        <div id="modal-product-reviews" class="mt-3">
+                            <h6>Reviews:</h6>
+                            <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
+                        </div>
+                        <div id="add-review-form" class="mt-3">
+                            <form id="review-form" class="form-centered">
+                                <input type="hidden" id="modal-product-id">
+                                <div class="form-group">
+                                    <label for="review-name">Name:</label>
+                                    <input type="text" id="review-name" class="form-control textarea-margin" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="review-text">Comment:</label>
+                                    <textarea id="review-text" class="form-control textarea-margin" rows="3" required></textarea>
+                                </div>
+                                <div class="button-container">
+                                    <button type="submit" class="btn btn-primary submit-review-button">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+                        
+                    </div>
 
 
                 </div>
