--- a/index.html
+++ b/index.html
@@ -555,6 +555,25 @@
     </div>
 
     <img id="loader" class="loader" src="images/shopping.gif" alt="Loading...">
+<!-- Cookie consent modal -->
+<div id="cookieConsentModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="cookieConsentModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="cookieConsentModalLabel">Cookie Consent</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                We use cookies to ensure you get the best experience on our website. By continuing, you agree to our use of cookies.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="acceptCookiesBtn">Accept</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
     <!-- Bootstrap JS and jQuery -->
