--- a/index.html
+++ b/index.html
@@ -410,11 +410,15 @@
                 </a>
             </div>
         </div>
+        <div>
+            <li class="nav-item">
+                <input class="form-control" type="text" placeholder="Search.." aria-label="Search">
+            </li>
+        </div>
+        
         <div class="collapse navbar-collapse justify-content-between align-items-center" id="navbarSupportedContent">
             <ul class="navbar-nav flex-grow-1 justify-content-center">
-                <li class="nav-item">
-                    <input class="form-control" type="text" placeholder="Search.." aria-label="Search">
-                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="index.html" style="padding-right: 20px;">Products</a>
                 </li>
