--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         display: flex;
         align-items: center;
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        text-align: center;
     }
 
     .navbar-brand img {
@@ -411,9 +412,9 @@
             </div>
         </div>
         <div>
-            <li class="nav-item">
+            <div class="nav-item">
                 <input class="form-control" type="text" placeholder="Search.." aria-label="Search">
-            </li>
+            </div>
         </div>
         
         <div class="collapse navbar-collapse justify-content-between align-items-center" id="navbarSupportedContent">
