--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
         margin-top: 20px;
         margin-bottom: 20px;
     }
+   
 </style>
 
 <body>
@@ -347,16 +348,16 @@
             <div class="d-flex flex-column flex-lg-row w-100">
                 
                 <ul class="navbar-nav flex-grow-1 justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html" style="padding-right: 20px;">Products</a>
+                    <li class="nav-item" >
+                        <a class="nav-link" href="index.html" style="padding-right: 20px; color:#fff;" >Products</a>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                             <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
-                                aria-expanded="false">
+                                aria-expanded="false" style="color: #fff;">
                                 Our Branches
                             </a>
-                            <div class="dropdown-menu" id="dropdownMenu" aria-labelledby="navbarDropdown">
+                            <div class="dropdown-menu" id="dropdownMenu" aria-labelledby="navbarDropdown" style="color: #fff;">
                                 <a class="dropdown-item" href="#">Roret Branch</a>
                                 <a class="dropdown-item" href="#">Kapsuser Branch</a>
                                 <a class="dropdown-item" href="index.html">Kericho Town Branch</a>
