--- a/index.html
+++ b/index.html
@@ -476,12 +476,12 @@
                         </div>
                         <!-- Product Details -->
                         <div id="modal-product-body" class="col-md-6 mt-3 mt-md-0">
-                            <h5 id="modal-product-name"></h5>
-                            <p id="modal-product-description"></p>
-                            <p id="modal-product-price"></p>
+                            <h5 id="modal-product-name" style="font-size: medium;"></h5>
+                            <p id="modal-product-description" style="font-size: smaller;"></p>
+                            <p id="modal-product-price" style="font-size: smaller;"></p>
 
                             <!-- Size Selection -->
-                            <div class="form-group">
+                            <div class="form-group" style="font-size: smaller;">
                                 <label for="product-size">Size:</label>
                                 <select id="product-size" class="form-control">
                                     <option value="22">22</option>
@@ -499,16 +499,16 @@
                             </div>
 
                             <!-- Quantity Selection -->
-                            <div class="form-group">
+                            <div class="form-group" style="font-size: smaller;">
                                 <label for="product-quantity">Quantity:</label>
                                 <input type="number" id="product-quantity" class="form-control" value="1" min="1">
                             </div>
 
                             <!-- Add to Cart and Inquire on WhatsApp Buttons -->
                             <div class="d-flex justify-content-center mt-3">
-                                <button id="add-to-cart-button" class="btn btn-primary mx-2">Add to Cart</button>
+                                <button id="add-to-cart-button" class="btn btn-primary mx-2" style="font-size: smaller;">Add to Cart</button>
                                 <a href="whatsapp://send?phone=+254723914386&text=Hello%20I%20would%20like%20to%20inquire%20about%20"
-                                    class="btn btn-success mx-2" id="whatsapp-button">Inquire on WhatsApp</a>
+                                    class="btn btn-success mx-2" id="whatsapp-button" style="font-size: smaller;">Inquire on WhatsApp</a>
                             </div>
 
                             <!-- Hidden input for storing product ID -->
@@ -524,29 +524,29 @@
                 <ul class="nav nav-tabs mt-4 justify-content-center" id="productTab" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" id="specifications-tab" data-toggle="tab" href="#specifications"
-                            role="tab" aria-controls="specifications" aria-selected="true">Description</a>
+                            role="tab" aria-controls="specifications" aria-selected="true" style="font-size: x-small;">Description</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item"  style="font-size: x-small;">
                         <a class="nav-link" id="reviews-tab" data-toggle="tab" href="#reviews" role="tab"
                             aria-controls="reviews" aria-selected="false">Comments</a>
                     </li>
                 </ul>
 
                 <!-- Tab panes -->
-                <div class="tab-content" id="productTabContent">
+                <div class="tab-content" id="productTabContent"  style="font-size: x-small;">
 
                     <!-- Specifications Tab -->
                     <div class="tab-pane fade show active" id="specifications" role="tabpanel"
                         aria-labelledby="specifications-tab">
                         <div id="modal-product-specifications" class="mt-3">
-                            <h6>Specifications:</h6>
+                            <h6 style="font-size: small;">Specifications:</h6>
                             <p id="modal-product-specs"></p>
                         </div>
                     </div>
                     <!-- Reviews Tab -->
                     <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
                         <div id="modal-product-reviews" class="mt-3">
-                            <h6>Reviews:</h6>
+                            <h6 style="font-size: small;">Reviews:</h6>
                             <ul id="modal-product-reviews-list" class="list-unstyled"></ul>
                         </div>
                         <div id="add-review-form" class="mt-3">
