--- a/index.html
+++ b/index.html
@@ -422,32 +422,6 @@
 
     </nav>
 
-    <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin-top: 50p">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="images/1.png" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="images/2.png" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="images/3.png" alt="Third slide">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div> -->
     <!-- Main Content -->
 
     <div id="main-content"
@@ -478,7 +452,7 @@
                         <div id="modal-product-body" class="col-md-6 mt-3 mt-md-0">
                             <h5 id="modal-product-name" style="font-size: medium;"></h5>
                             <p id="modal-product-description" style="font-size: smaller;"></p>
-                            <p id="modal-product-price" style="font-size: smaller;"></p>
+                            <p id="modal-product-price" style="font-size: smaller; color: #f40b0b; font-weight: bold;"></p>
 
                             <!-- Size Selection -->
                             <div class="form-group" style="font-size: smaller;">
