--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
             width: 100%;
 
         }
-
+        .navbar-brand img {
+        height: 30px;
+    }
         .desktop-view {
             display: none;
         }
@@ -387,10 +389,13 @@
                     id="navbarSupportedContent">
 
                     <ul class="navbar-nav flex-grow-1 justify-content-center">
-                        <div class="nav-item search-container">
-                            <input class="form-control search-input" type="text" placeholder="Search..."
-                                aria-label="Search">
-                        </div>
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2 justify-content-center" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html" style="color: #fff;">Home <span class="sr-only">(current)</span></a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html" style="padding-right: 10px; color:#fff;">Products</a>
                         </li>
@@ -444,10 +449,10 @@
             <div id="product-details-body" class="col-md-6 mt-3 mt-md-0">
                 <h5 id="product-name" style="font-size: medium;"></h5>
                 <!-- Specifications Tab -->
-                <div>
+            <div>
 
-                    <p id="product-specs"></p>
-                </div>
+                    <h6 id="product-specs"></h6>
+            </div>
                 <p id="product-description" style="font-size: smaller; visibility: hidden;"></p>
                 <p id="product-price" style="font-size: smaller; color: #f40b0b; font-weight: bold;"></p>
                 <!-- Size Selection -->
@@ -473,10 +478,12 @@
                     <input type="number" id="product-quantity" class="form-control" value="1" min="1">
                 </div>
                 <!-- Add to Cart and Inquire on WhatsApp Buttons -->
-<div class="d-flex justify-content-center mt-3">
-    <button id="add-to-cart-button" class="btn btn-primary mx-2" style="font-size: smaller;">Add to Cart</button>
-    <a href="#" class="btn btn-success mx-2" id="whatsapp-button" style="font-size: smaller;">Inquire on WhatsApp</a>
-</div>
+                <div class="d-flex justify-content-center mt-3">
+                    <button id="add-to-cart-button" class="btn btn-primary mx-2" style="font-size: smaller;">Add to
+                        Cart</button>
+                    <a href="#" class="btn btn-success mx-2" id="whatsapp-button" style="font-size: smaller;">Inquire on
+                        WhatsApp</a>
+                </div>
                 <!-- Hidden input for storing product ID -->
                 <input type="hidden" id="product-id">
             </div>
